New entries should be added at the top

2005-09-09 Added support for auto canvas resizing with
           fig.set_figsize_inches(9,5,forward=True) # inches
           OR
           fig.resize(400,300)  # pixels


2005-09-07 figure.py: update Figure.draw() to use the updated
           renderer.draw_image() so that examples/figimage_demo.py works again.
           examples/stock_demo.py: remove data_clipping (which no longer
           exists) - SC

2005-09-06 Added Eric's tick.direction patch: in or out in rc

2005-09-06 Added Martin's rectangle selector widget

2005-09-04 Fixed a logic err in text.py that was preventing rgxsuper
           from matching - JDH

2005-08-29 Committed Ken's wx blit patch #1275002

2005-08-26 colorbar modifications - now uses contourf instead of imshow
           so that colors used by contourf are displayed correctly.
           Added two new keyword args (cspacing and clabels) that are
           only relevant for ContourMappable images - JSWHIT

2005-08-24 Fixes a PS image bug reported by Darren - JDH

2005-08-23 colors.py: change hex2color() to accept unicode strings as well as
           normal strings. Use isinstance() instead of types.IntType etc - SC

2005-08-16 removed data_clipping line and rc property - JDH

2005-08-22 backend_svg.py: Remove redundant "x=0.0 y=0.0" from svg element.
           Increase svg version from 1.0 to 1.1. Add viewBox attribute to svg
           element to allow SVG documents to scale-to-fit into an arbitrary
           viewport - SC

2005-08-16 Added Eric's dot marker patch - JDH

2005-08-08 Added blitting/animation for TkAgg - CM

2005-08-05 Fixed duplicate tickline bug - JDH

2005-08-05 Fixed a GTK animation bug that cropped up when doing
           animations in gtk//gtkagg canvases that had widgets packed
           above them

2005-08-05 Added Clovis Goldemberg patch to the tk save dialog

2005-08-04 Removed origin kwarg from backend.draw_image.  origin is